Fix Vercel deployment: move requirements.txt to root, add .vercelignore, and update vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
             "dest": "backend/main.py"
         },
         {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
+        {
             "src": "/(.*)",
             "dest": "backend/main.py"
         }
